--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h1 class="display-4 fw-bold mb-3">Pooja Ashok Jadhav</h1>
                     <h2 class="lead mb-4">AWS Cloud Support Engineer | 4.9+ Years Experience</h2>
                     <p class="fs-5 mb-4">
-                        4.9+ years of hands-on experience in AWS cloud operations, infrastructure management, and DevOps. 
+                        4.9+ years of hands-on experience in AWS cloud operations, infrastructure management 
                         Skilled in deployment pipelines, incident management, and cloud infrastructure optimization with proven 
                         expertise in EC2, S3, VPC, CloudWatch, and Docker containerization.
                     </p>
